RSWW-102 add multiple rooms reservations